# book-knowledge-graph

./: .gitignore  README.md  main.py  pyproject.toml
frontend/: package-lock.json  package.json
notes/: ThePlan.md  concepts.md  interview_questions.md
src/: animate.py  app.py  concepts.py  embeddings.py  extractor.py  graph.py  layout.py  visualize.py
